# nautilex-scidex

./: .gitignore  README.md  pyproject.toml
.opencode/notes/: workspace-persistence.md
.opencode/verification-logs/: 2026-04-01-workspace-followup.md
app/: streamlit_app.py
app/pages/: 1_literature.py  2_knowledge_graph.py  3_hypothesis.py  4_experiment.py
docs/plans/: 2026-04-01-scidex-evidence-workspaces.md
src/scidex/: __init__.py  errors.py  pipeline.py
src/scidex/experiment/: __init__.py  designer.py  exporter.py  models.py  pubmed_client.py  uniprot_client.py
src/scidex/hypothesis/: __init__.py  analogy_engine.py  contradictions.py  critic.py  evolver.py  gap_detector.py  gde.py  generator.py  models.py  ranking.py  swanson_linker.py  tournament.py
src/scidex/knowledge/: __init__.py  accumulator.py  models.py
src/scidex/knowledge_graph/: __init__.py  extractor.py  graph.py  models.py  relations.py  visualization.py
src/scidex/literature/: __init__.py  ingestion.py  paper_store.py  s2_client.py
src/scidex/llm/: client.py  llm_config.py
src/scidex/workspace/: __init__.py  models.py  session.py  store.py
tests/: test_analogy_engine.py  test_contradictions.py  test_entity_extractor.py  test_experiment.py  test_gap_detector.py  test_gde.py  test_hypothesis_generator.py  test_hypothesis_ranking.py  test_kg_visualization.py  test_knowledge.py  test_knowledge_graph.py  test_pipeline.py  test_relations.py  test_s2_client.py  test_swanson_linker.py  test_workspace_store.py  test_workspace_ui_contracts.py
